@@ -86,7 +86,7 @@ public class CreaAsta extends HttpServlet {
         try {
             List<Integer> articoloCodici = Arrays.stream(articoliIds)
                     .map(Integer::parseInt)
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<Articolo> articoliSelezionati = new ArrayList<>();
             for(int codiceArticolo : articoloCodici){
@@ -111,7 +111,7 @@ public class CreaAsta extends HttpServlet {
             String venditoreUsername = SessionUtils.getUser(request).getUsername();
 
             // Inserisci l'asta
-            Asta asta = new Asta(0, venditoreUsername, dataInizio, scadenza, prezzoIniziale,prezzoIniziale, rialzoMinimo, false);
+            Asta asta = new Asta(0, venditoreUsername, dataInizio, scadenza,prezzoIniziale,prezzoIniziale, rialzoMinimo, false);
             astaDao.createAsta(asta);
             int astaId = asta.getId();
 
